# Nexus-Brain

./: .gitignore  .gitleaksignore  ARCHITECTURE.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  README.md
.claude/agents/: README.md  arch-drift-auditor.md  brief-drafter.md  code-quality-reviewer.md  reachability-auditor.md  security-reviewer.md
.claude/commands/: check-arch.md  eval.md  orchestrate-end.md  orchestrate-start.md  phase-exit.md  preflight.md  run-tests.md  session-end.md  session-start.md  tdd.md  team-end.md  team-start.md  trace.md
.scaffolding/: manifest.json  upgrade-log.jsonl
app/: CLAUDE.md  LESSONS.md
ci/bench/lancedb_maintenance/: README.md  __init__.py  corpus.py  fake_store.py  harness.py  test_harness_infra.py  types.py
ci/eval/redaction_fuzz/: README.md  __init__.py  corpus.py  gate.py  generator.py  harness.py  oracle.py  stub_redactor.py  test_harness_infra.py  types.py
ci/probes/: codegraph_coldiff.md  federation_spike.md
core/: CLAUDE.md  LESSONS.md  _types.py  pyproject.toml
core/ingest/: __init__.py  _code_hierarchy.py  chunk.py  classify.py  discover.py  pipeline.py  redactor.py
core/model/: __init__.py  anchor.py  chunk.py  evidence.py  manifest.py  mcp_contract.py  migrations.py  policy.py  provenance.py  redactor_iface.py  registry.py  stamp.py
core/ports/: __init__.py  clock.py  codegraph.py  events.py  host.py  idgen.py  observability.py  providers.py  secrets.py
core/testing/: __init__.py  fakes.py
core/tests/ingest/: test_chunk.py  test_classify.py  test_discover.py  test_pipeline.py  test_redactor.py
core/tests/model/: test_anchor.py  test_chunk.py  test_evidence.py  test_manifest.py  test_mcp_contract.py  test_migrations.py  test_policy.py  test_provenance.py  test_redactor_iface.py  test_registry.py  test_stamp.py  test_types.py
core/tests/ports/: test_clock.py  test_codegraph.py  test_events.py  test_host.py  test_idgen.py  test_observability.py  test_providers.py  test_secrets.py
docs/: README.md  lead-decisions-while-away.md  orchestrator-briefing.md  scaffolding-reference.md  tdd-brief-template.md  team-protocol.md
docs/archive/v0.1/: PRD_ROUGH_DRAFT.md
docs/archive/v0.1/artifact-index/: ARTIFACT_INDEX.md  ARTIFACT_MANIFEST.json
docs/archive/v0.1/loose-existing-docs/: HANDOFF.md  PROJECT_BRAIN_V2_NATIVE_EXPORT.md  ROOT_PRD_DUPLICATE.md  ROOT_RESEARCH_DUPLICATE.md  VALIDATION-2026-06-05.md  onboarding-and-doc-lifecycle.md
docs/archive/v0.1/loose-exports/: PROJECT_BRAIN_PLATFORM_INTERFACE_EXPORT.md
docs/audits/: phase1-arch-drift.md  phase1-reachability.md  phase1-security.md  phase2-arch-drift.md  phase2-reachability.md  redaction-envelope.md
docs/briefs/: contract-001-1.1-determinism-seams.md  contract-002-1.2-chunk-schema.md  contract-003-1.2-store-version-stamp.md  contract-004-1.2-manifest.md  contract-005-1.2-registry.md  contract-006-1.2-migrations.md  contract-007-1.3-anchor.md  contract-008-1.3-evidence-ref.md  contract-009-1.3-provenance-packet.md  contract-010-1.4-hostport.md  contract-011-1.4-provider-ports.md  contract-012-1.4-codegraph-port.md  contract-013-1.4-event-secret-obs-ports.md  contract-014-1.5-redactor-iface.md  contract-015-1.5-policy-schema.md  contract-016-1.5-mcp-contract-ingress.md  contract-017-1.5-mcp-contract-results.md  contract-018-1.6-identity-consolidation.md  contract-019-1.6-list-to-tuple.md  contract-020-1.6-strictbool.md  contract-021-0.4-lancedb-bakeoff-rig.md  spine-001-2.1-discovery-classification.md  spine-002-2.2a-anchor-aware-chunking-docs.md  spine-003-2.2b-anchor-aware-chunking-code.md  spine-004-2.3-redactor-catchable-set-engine.md  spine-005-2.4-2.S-add-pipeline-hostport-proof.md
docs/gap-audits/: 001-synthesis.md  002-findings-by-dimension.json  003-codegraph-1x-reprobe.md  anchor-remap.md  prd-req-coverage.md
docs/integrations/: MAIN_PLATFORM_INTERFACE.md
docs/planning/: ARCHITECTURE_DRAFT.md  ASSUMPTIONS.md  CLAUDE_CODE_HANDOFF.md  CONSTRAINTS.md  DATA_MODEL.md  DECISIONS.md  DIAGRAM_PLAN.md  DOMAIN_MODEL.md  EVALUATION_CRITERIA.md  OPEN_QUESTIONS.md  PRODUCT_BRIEF.md  REQUIREMENTS.md  RESEARCH.md  RISKS.md  STAKEHOLDERS.md  THREAT_MODEL.md  USERS.md  USER_FLOWS.md
docs/product/: PRD.md
docs/requirements/: ONBOARDING_AND_DOC_LIFECYCLE.md
docs/research/: RESEARCH_DOSSIER.md
docs/sessions/: contract-001-2026-06-17-phase1-contracts.md  contract-002-2026-06-17-phase1-determinism-and-data-contracts.md  contract-003-2026-06-18-trust-contracts-and-port-freeze.md  contract-004-2026-06-18-phase1-trust-and-ports-handoff.md  contract-005-2026-06-20-phase1.5-boundary-contracts-and-1.6-hardening-sweep.md  contract-006-2026-06-20-phase1.5-1.6-orchestrator-handoff.md  contract-007-2026-06-20-phase0-lancedb-bakeoff-rig.md  contract-008-2026-06-20-phase0-forkgate-orchestration.md  spine-001-2026-06-21-phase2-ingest-surfaces.md  spine-002-2026-06-21-add-pipeline-hostport-proof.md
docs/team-handoffs/: contract-001-2026-06-18-phase1-pre-fork-gate.md  contract-002-2026-06-21-fork-gate-complete.md
scripts/: spec-lint.sh
scripts/guards/: territory-guard.sh
