[project]
name = "nexus-brain-core"
version = "0.0.0"
description = "Nexus Brain — local-first portfolio memory · retrieval · reasoning engine (core)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2",
    # gitwildmatch (.gitignore/.brainignore) matching for §8 discovery. Pinned <1 to lock the
    # "gitwildmatch" factory name (renamed to "gitignore" in the unreleased pathspec 1.0.0).
    "pathspec>=0.12,<1",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "mypy>=1.11",
    "ruff>=0.6",
]

# Virtual project: deps + dev tooling only; the flat top-level packages
# (ports/ · testing/ · tests/) are import-rooted at core/ via pytest's
# pythonpath, not built/installed. See core/CLAUDE.md "Module organization".
[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["ports", "model", "testing", "tests", "ingest"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["ports", "model", "testing", "tests", "ingest"]

# The redaction-fuzz CI gate lives in ci/ (repo root, outside core's import root). The §18 gate test
# reaches it out-of-band (core ⊥ ci/: the engine never imports ci; only the test does). ci/ is not a
# typed package here, so treat its imports as untyped rather than erroring under --strict.
[[tool.mypy.overrides]]
module = "ci.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "unit: fast, isolated, deterministic unit tests",
    "integration: cross-component integration tests",
]
